--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -16,7 +16,7 @@
                 <a href="{{ path('app_services_defaut') }}">Services</a>
                 <a href="{{ path('app_about_us') }}">About us</a>
                 <a href="{{ path('app_newsletter') }}">Newsletter</a>
-                <a href="#">Contact</a>
+                <a href="{{ path('app_contact') }}">Contact</a>
             </nav>
         </div>
 
