--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -65,6 +65,7 @@
                     margin-bottom: 1rem;
                 }
             }
+
         }
 
         &--stats {
@@ -83,6 +84,15 @@
                     margin-bottom: 1rem;
                 }
             }
+            > div {
+                display: flex;
+                flex-direction: row;
+
+                @media only screen and (max-width: 680px) {
+                    place-content: center;
+                }
+            }
+
         }
 
         &--newsletter {
