--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -10,7 +10,7 @@
                 <h2>Statistiques</h2>
                 {% for row in statsTab %}
                     <div>
-                        <span>{{ row.phrase }} : </span>
+                        <span>{{ row.phrase }}</span>
                         <p> {{ row.count }}</p>
                     </div>
                 {% endfor %}
