--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -177,6 +177,9 @@
                 @media only screen and (max-width: 768px) {
                     flex-flow: row;
                 }
+                @media only screen and (max-width: 660px) {
+                    flex-wrap: wrap;
+                }
             }
             input {
                 flex: 1 1 auto;
@@ -203,6 +206,9 @@
 
                 @media only screen and (max-width: 992px) {
                     height: 3rem;
+                }
+                @media only screen and (max-width: 660px) {
+                    margin: auto;
                 }
             }
         }
