--- a/sass/partials/_modal.scss
+++ b/sass/partials/_modal.scss
@@ -1,4 +1,4 @@
-.modal, .modal-error {
+.modal-dashboard, .modal-settings, .madal-contact {
     position: fixed;
     z-index: 10000;
     top: 0;left: 0;
@@ -7,6 +7,7 @@
     height: 100%;
     overflow: auto;
     background-color: rgba(0,0,0,0.4);
+    font-size: 1.6rem;
 
     &.active {
         display: flex;
