--- a/sass/partials/_modal.scss
+++ b/sass/partials/_modal.scss
@@ -1,4 +1,4 @@
-.modal-dashboard, .modal-settings, .madal-contact {
+.modal-home, .modal-dashboard, .modal-settings, .madal-contact {
     position: fixed;
     z-index: 10000;
     top: 0;left: 0;
