--- a/templates/partials/_btn-profile.html.twig
+++ b/templates/partials/_btn-profile.html.twig
@@ -65,7 +65,7 @@
                 </a>
             </li>
             <li class="profile-dropdown-item">
-                <a href="#">
+                <a href="{{ path('app_contact') }}">
                     <div class="profile-dropdown-item-icon">
                         {{ include('svg/contacter.html.twig') }}
                     </div>
