--- a/sass/pages/_provider-profile.scss
+++ b/sass/pages/_provider-profile.scss
@@ -254,7 +254,7 @@
     }
 }
 .provider_profile__similar {
-    // padding: 9rem 0 0;
+    padding: 9rem 0 0;
 
     &__container {
         max-width: 1210px;
