--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -39,7 +39,7 @@
             <div class="providers-button">
                 <a href="{{ path('app_providers') }}">
                     {{ include("svg/providers.html.twig") }}
-                    <span>Providers</span>
+                    <span>Prestataires</span>
                 </a>
             </div>
 
