--- a/templates/providers/provider-profile.html.twig
+++ b/templates/providers/provider-profile.html.twig
@@ -113,6 +113,7 @@
                         <li>Le même service</li>
                     </ul>
                 </div> #}
+                <h2>Il existe d'autres prestataires que l'on peut trouver à proximité</h2>
                 <div class="provider_profile__similar__listing">
                     {% include "partials/_card-provider.html.twig" with {providers: filterProvidersSimilary.listing} %}
                 </div>
