--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -260,7 +260,7 @@
     gap: 2rem;
   }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
   .hero__container {
     flex-direction: column;
   }
@@ -319,6 +319,11 @@
     display: none;
   }
 }
+@media only screen and (max-width: 600px) {
+  .hero .hero__content h1 {
+    font-size: 4rem;
+  }
+}
 .hero .hero-featured {
   position: relative;
   width: fit-content;
@@ -343,6 +348,12 @@
     position: static;
     font-size: 4rem;
     margin-bottom: 2rem;
+  }
+}
+@media only screen and (max-width: 950px) {
+  .hero .hero-featured > h2 {
+    font-size: 3rem;
+    text-align: center;
   }
 }
 .hero .hero-featured__container {
@@ -389,8 +400,13 @@
   margin: 9rem auto;
 }
 .providers > h2 {
-  font-size: 50px;
-  margin-bottom: 70px;
+  font-size: 5rem;
+  margin-bottom: 7rem;
+}
+@media only screen and (max-width: 600px) {
+  .providers > h2 {
+    font-size: 4rem;
+  }
 }
 .providers__link {
   background: inherit;
@@ -442,6 +458,11 @@
     max-width: 300px;
   }
 }
+@media only screen and (max-width: 600px) {
+  .providers__container {
+    gap: 5rem;
+  }
+}
 
 .about-us {
   background-color: rgba(227, 226, 245, 0.6);
@@ -453,27 +474,52 @@
   margin: 0 auto;
 }
 .about-us__title {
-  font-size: 50px;
-  margin-bottom: 70px;
+  font-size: 5rem;
+  margin-bottom: 7rem;
+}
+@media only screen and (max-width: 600px) {
+  .about-us__title {
+    font-size: 4rem;
+  }
 }
 .about-us__content {
   display: flex;
-  gap: 30px;
+  gap: 3rem;
+}
+@media only screen and (max-width: 800px) {
+  .about-us__content {
+    flex-flow: column;
+  }
 }
 .about-us__image-container {
   flex: 1;
-  border-radius: 10px;
+  border-radius: 1rem;
   overflow: hidden;
-  height: 458px;
+  height: 45.8rem;
   overflow: hidden;
+}
+@media only screen and (max-width: 992px) {
+  .about-us__image-container {
+    height: 35rem;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .about-us__image-container {
+    height: 45.8rem;
+  }
 }
 .about-us__image-container img {
   height: 100%;
-  border-radius: 10px;
+  border-radius: 1rem;
 }
 .about-us__text-container {
   flex: 1;
   line-height: 1.5;
+}
+@media only screen and (max-width: 992px) {
+  .about-us__text-container {
+    color: red;
+  }
 }
 .about-us__text {
   margin-bottom: 1rem;
@@ -1102,6 +1148,9 @@
   }
 }
 
+.provider_profile__similar {
+  padding: 9rem 0 0;
+}
 .provider_profile__similar__container {
   max-width: 1210px;
   margin: auto;
@@ -1177,12 +1226,34 @@
   font-size: 5rem;
   text-transform: capitalize;
 }
+@media only screen and (max-width: 800px) {
+  .aboutpage .titre {
+    font-size: 4rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .aboutpage .titre {
+    font-size: 5rem;
+    text-align: center;
+    margin-bottom: 3rem;
+  }
+}
 .aboutpage .container {
   max-width: 1440px;
   width: calc(100% - 8rem);
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
+}
+@media only screen and (max-width: 768px) {
+  .aboutpage .container {
+    flex-flow: column;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .aboutpage .about_us .container .about_us__nav {
+    display: none;
+  }
 }
 .aboutpage .text {
   text-align: justify;
@@ -1221,15 +1292,61 @@
   border-radius: 1rem;
   overflow: hidden;
 }
+@media only screen and (max-width: 916px) {
+  .aboutpage .about_us__banner {
+    height: 50rem;
+  }
+}
+@media only screen and (max-width: 833px) {
+  .aboutpage .about_us__banner {
+    height: 45rem;
+  }
+}
+@media only screen and (max-width: 756px) {
+  .aboutpage .about_us__banner {
+    height: 40rem;
+  }
+}
+@media only screen and (max-width: 679px) {
+  .aboutpage .about_us__banner {
+    height: 35rem;
+  }
+}
+@media only screen and (max-width: 603px) {
+  .aboutpage .about_us__banner {
+    height: 30rem;
+  }
+}
+@media only screen and (max-width: 528px) {
+  .aboutpage .about_us__banner {
+    height: 25rem;
+  }
+}
 .aboutpage .about_us__banner img {
   object-fit: cover;
+}
+@media only screen and (max-width: 768px) {
+  .aboutpage .section:nth-of-type(3) .container {
+    display: flex;
+    flex-flow: column-reverse;
+  }
 }
 .aboutpage .section {
   padding: 9rem 0;
 }
+@media only screen and (max-width: 768px) {
+  .aboutpage .section {
+    padding: 9rem 0 0;
+  }
+}
 .aboutpage .section .content {
   flex: 1;
   padding-top: 2rem;
+}
+@media only screen and (max-width: 768px) {
+  .aboutpage .section .content {
+    padding-bottom: 5rem;
+  }
 }
 .aboutpage .section .banner {
   flex: 1;
@@ -1245,11 +1362,36 @@
 .aboutpage .section:nth-of-type(even) .text {
   padding-right: 10rem;
 }
+@media only screen and (max-width: 992px) {
+  .aboutpage .section:nth-of-type(even) .text {
+    padding-right: 5rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .aboutpage .section:nth-of-type(even) .text {
+    padding-right: 0;
+  }
+}
 .aboutpage .section:nth-of-type(odd) .text, .aboutpage .section:nth-of-type(odd) .titre {
   padding-left: 10rem;
 }
+@media only screen and (max-width: 992px) {
+  .aboutpage .section:nth-of-type(odd) .text, .aboutpage .section:nth-of-type(odd) .titre {
+    padding-left: 5rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .aboutpage .section:nth-of-type(odd) .text, .aboutpage .section:nth-of-type(odd) .titre {
+    padding-left: 0;
+  }
+}
 .aboutpage .team {
   text-align: center;
+}
+@media only screen and (max-width: 768px) {
+  .aboutpage .team {
+    margin-top: 9rem;
+  }
 }
 .aboutpage .team .container {
   flex-flow: column;
@@ -1267,10 +1409,25 @@
   max-width: 1182px;
   margin: 9rem auto;
 }
+@media only screen and (max-width: 1260px) {
+  .aboutpage .team .gallery {
+    max-width: 772px;
+  }
+}
+@media only screen and (max-width: 851px) {
+  .aboutpage .team .gallery {
+    max-width: 360px;
+  }
+}
 .aboutpage .team .items {
   width: 36rem;
   text-align: left;
   font-size: 1.4rem;
+}
+@media only screen and (max-width: 768px) {
+  .aboutpage .team .items {
+    text-align: center;
+  }
 }
 .aboutpage .team .items > div {
   overflow: hidden;
